Added focus to current page on nav bar & added media query for mobiles to preserve nav height in landscape mode

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="icon dropdown">
         <p class="icon-p">&#9776; Navigation</p>
         <div class="dropdown-content">
-          <a class="nav-excuse" href="index.html">Home</a>
+          <a class="nav-excuse focus" href="index.html">Home</a>
           <a class="nav-excuse" href="scripts.html">AdWords Scripts</a>
           <a class="nav-excuse" href="blog.html">Book Reviews</a>
           <a class="nav-excuse" href="friends.html">Friends</a>
