--- a/scripts.html
+++ b/scripts.html
@@ -14,7 +14,7 @@
         <p class="icon-p">&#9776; Navigation</p>
         <div class="dropdown-content">
           <a class="nav-excuse" href="index.html">Home</a>
-          <a class="nav-excuse" href="scripts.html">AdWords Scripts</a>
+          <a class="nav-excuse focus" href="scripts.html">AdWords Scripts</a>
           <a class="nav-excuse" href="blog.html">Book Reviews</a>
           <a class="nav-excuse" href="resume.html">Resume</a>
           <a class="nav-excuse" href="music.html">Music</a>
