--- a/timesheets.html
+++ b/timesheets.html
@@ -20,7 +20,7 @@
           <a class="nav-excuse" href="musings.html">Musings</a>
           <a class="nav-excuse" href="normalscripts.html">Normal Scripts</a>
           <a class="nav-excuse" href="poems.html">Poems</a>
-          <a class="nav-excuse" href="timesheets.html">Timesheets</a>
+          <a class="nav-excuse focus" href="timesheets.html">Timesheets</a>
           <a class="nav-excuse" href="contact.html">Contact</a>
         </div>
       </div>
