--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
           <a class="nav-excuse" href="normalscripts.html">Normal Scripts</a>
           <a class="nav-excuse" href="poems.html">Poems</a>
           <a class="nav-excuse" href="timesheets.html">Timesheets</a>
-          <a class="nav-excuse" href="contact.html">Contact</a>
+          <a class="nav-excuse focus" href="contact.html">Contact</a>
         </div>
       </div>
       <a href="resume.html">Resume</a>
