--- a/musings.html
+++ b/musings.html
@@ -18,7 +18,7 @@
           <a class="nav-excuse" href="blog.html">Book Reviews</a>
           <a class="nav-excuse" href="resume.html">Resume</a>
           <a class="nav-excuse" href="music.html">Music</a>
-          <a class="nav-excuse" href="musings.html">Musings</a>
+          <a class="nav-excuse focus" href="musings.html">Musings</a>
           <a class="nav-excuse" href="normalscripts.html">Normal Scripts</a>
           <a class="nav-excuse" href="poems.html">Poems</a>
           <a class="nav-excuse" href="timesheets.html">Timesheets</a>
