--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
           <a class="nav-excuse" href="index.html">Home</a>
           <a class="nav-excuse" href="scripts.html">AdWords Scripts</a>
           <a class="nav-excuse" href="blog.html">Book Reviews</a>
-          <a class="nav-excuse" href="resume.html">Resume</a>
+          <a class="nav-excuse focus" href="resume.html">Resume</a>
           <a class="nav-excuse" href="music.html">Music</a>
           <a class="nav-excuse" href="musings.html">Musings</a>
           <a class="nav-excuse" href="normalscripts.html">Normal Scripts</a>
