--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
           <a class="nav-excuse focus" href="contact.html">Contact</a>
         </div>
       </div>
+      <a href="index.html">Home</a>
       <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
       <div class="dropdown">
