--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="navbar" class="nav-bar">
       <div class="icon dropdown">
         <p class="icon-p">&#9776; Navigation</p>
-        <div class="dropdown-content">
+        <div class="dropdown-content" onclick="">
           <a class="nav-excuse focus" href="index.html">Home</a>
           <a class="nav-excuse" href="scripts.html">AdWords Scripts</a>
           <a class="nav-excuse" href="blog.html">Book Reviews</a>
@@ -26,6 +26,7 @@
           <a class="nav-excuse" href="contact.html">Contact</a>
         </div>
       </div>
+      <a href="index.html">Home</a>
       <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
       <div class="dropdown">
