--- a/timesheets.html
+++ b/timesheets.html
@@ -13,6 +13,7 @@
       <div class="icon dropdown">
         <p class="icon-p">&#9776; Navigation</p>
         <div class="dropdown-content">
+          <a class="nav-excuse" href="index.html">Home</a>
           <a class="nav-excuse" href="scripts.html">AdWords Scripts</a>
           <a class="nav-excuse" href="blog.html">Book Reviews</a>
           <a class="nav-excuse" href="resume.html">Resume</a>
@@ -24,6 +25,7 @@
           <a class="nav-excuse" href="contact.html">Contact</a>
         </div>
       </div>
+      <a href="index.html">Home</a>
       <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
       <div class="dropdown">
