--- a/friends.html
+++ b/friends.html
@@ -26,6 +26,7 @@
           <a class="nav-excuse" href="contact.html">Contact</a>
         </div>
       </div>
+      <a href="index.html">Home</a>
       <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
       <div class="dropdown">
