--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="header">
     <div id="navbar" class="nav-bar">
       <div class="icon dropdown">
-        <p class="icon-p">&#9776; Navigation</p>
-        <div class="dropdown-content" onclick="">
+        <p  class="icon-p iconify" onclick="">&#9776; Navigation</p>
+        <div class="dropdown-content">
           <a class="nav-excuse focus" href="index.html">Home</a>
           <a class="nav-excuse" href="scripts.html">AdWords Scripts</a>
           <a class="nav-excuse" href="blog.html">Book Reviews</a>
@@ -30,7 +30,7 @@
       <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
       <div class="dropdown">
-        <p class="nav-bar-p">C's Drawer</p>
+        <p class="nav-bar-p iconify" onclick="">C's Drawer</p>
         <div class="dropdown-content">
           <a href="blog.html">Book Reviews</a>
           <a href="friends.html">Friends</a>
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="dropdown">
-        <p class="nav-bar-p">Projects</p>
+        <p class="nav-bar-p iconify" onclick="">Projects</p>
         <div class="dropdown-content">
           <a href="scripts.html">AdWords Scripts</a>
           <a href="normalscripts.html">Normal Scripts</a>
@@ -113,5 +113,8 @@
   </div>
   <div id="footer"></div>
 </body>
-<script src="js/modal.js"></script>
+<script type="text/javascript" src="js/modal.js"></script>
+<script type="text/javascript" src="js/nav.js"></script>
+
+</script>
 </html>
