rolling back navigation bar changes

--- a/index.html
+++ b/index.html
@@ -8,48 +8,47 @@
 <body>
 
 <!--- Navigation Bar --->
-  <div class="header">
-    <div id="navbar" class="nav-bar">
-      <div class="icon dropdown">
-        <p  class="icon-p iconify" onclick="">&#9776; Navigation</p>
-        <div class="dropdown-content">
-          <a class="nav-excuse focus" href="index.html">Home</a>
-          <a class="nav-excuse" href="scripts.html">AdWords Scripts</a>
-          <a class="nav-excuse" href="blog.html">Book Reviews</a>
-          <a class="nav-excuse" href="friends.html">Friends</a>
-          <a class="nav-excuse" href="resume.html">Resume</a>
-          <a class="nav-excuse" href="music.html">Music</a>
-          <a class="nav-excuse" href="musings.html">Musings</a>
-          <a class="nav-excuse" href="normalscripts.html">Normal Scripts</a>
-          <a class="nav-excuse" href="poems.html">Poems</a>
-          <a class="nav-excuse" href="timesheets.html">Timesheets</a>
-          <a class="nav-excuse" href="contact.html">Contact</a>
-        </div>
+<div class="header">
+  <div id="navbar" class="nav-bar">
+    <div class="icon dropdown">
+      <p class="icon-p">&#9776; Navigation</p>
+      <div class="dropdown-content">
+        <a class="nav-excuse" href="index.html">Home</a>
+        <a class="nav-excuse" href="scripts.html">AdWords Scripts</a>
+        <a class="nav-excuse" href="blog.html">Book Reviews</a>
+        <a class="nav-excuse focus" href="friends.html">Friends</a>
+        <a class="nav-excuse" href="resume.html">Resume</a>
+        <a class="nav-excuse" href="music.html">Music</a>
+        <a class="nav-excuse" href="musings.html">Musings</a>
+        <a class="nav-excuse" href="normalscripts.html">Normal Scripts</a>
+        <a class="nav-excuse" href="poems.html">Poems</a>
+        <a class="nav-excuse" href="timesheets.html">Timesheets</a>
+        <a class="nav-excuse" href="contact.html">Contact</a>
       </div>
-      <a href="index.html">Home</a>
-      <a href="resume.html">Resume</a>
-      <a href="contact.html">Contact</a>
-      <div class="dropdown">
-        <p class="nav-bar-p iconify" onclick="">C's Drawer</p>
-        <div class="dropdown-content">
-          <a href="blog.html">Book Reviews</a>
-          <a href="friends.html">Friends</a>
-          <a href="music.html">Music</a>
-          <a href="musings.html">Musings</a>
-          <a href="poems.html">Poems</a>
-        </div>
+    </div>
+    <a href="index.html">Home</a>
+    <a href="resume.html">Resume</a>
+    <a href="contact.html">Contact</a>
+    <div class="dropdown">
+      <p class="nav-bar-p">C's Drawer</p>
+      <div class="dropdown-content">
+        <a href="blog.html">Book Reviews</a>
+        <a href="friends.html">Friends</a>
+        <a href="music.html">Music</a>
+        <a href="musings.html">Musings</a>
+        <a href="poems.html">Poems</a>
       </div>
-      <div class="dropdown">
-        <p class="nav-bar-p iconify" onclick="">Projects</p>
-        <div class="dropdown-content">
-          <a href="scripts.html">AdWords Scripts</a>
-          <a href="normalscripts.html">Normal Scripts</a>
-          <a href="timesheets.html">Timesheets</a>
-        </div>
+    </div>
+    <div class="dropdown">
+      <p class="nav-bar-p">Projects</p>
+      <div class="dropdown-content">
+        <a href="scripts.html">AdWords Scripts</a>
+        <a href="normalscripts.html">Normal Scripts</a>
+        <a href="timesheets.html">Timesheets</a>
       </div>
     </div>
   </div>
-
+</div>
 <!--- Main Page Content:  --->
   <div id="lead">
     <h1 class="lead-head">Hi, <em>welcome to cicerotully's site...</em></h1>
