--- a/friends.html
+++ b/friends.html
@@ -11,7 +11,7 @@
   <div class="header">
     <div id="navbar" class="nav-bar">
       <div class="icon dropdown">
-        <p class="icon-p">&#9776; Navigation</p>
+        <p class="icon-p">&#9776;</p>
         <div class="dropdown-content">
           <a class="nav-excuse" href="index.html">Home</a>
           <a class="nav-excuse" href="scripts.html">AdWords Scripts</a>
