--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <div class="header">
   <div id="navbar" class="nav-bar">
     <div class="icon dropdown">
-      <p class="icon-p">&#9776; Navigation</p>
+      <p class="icon-p">&#9776;</p>
       <div class="dropdown-content">
-        <a class="nav-excuse" href="index.html">Home</a>
+        <a class="nav-excuse focus" href="index.html">Home</a>
         <a class="nav-excuse" href="scripts.html">AdWords Scripts</a>
         <a class="nav-excuse" href="blog.html">Book Reviews</a>
-        <a class="nav-excuse focus" href="friends.html">Friends</a>
+        <a class="nav-excuse" href="friends.html">Friends</a>
         <a class="nav-excuse" href="resume.html">Resume</a>
         <a class="nav-excuse" href="music.html">Music</a>
         <a class="nav-excuse" href="musings.html">Musings</a>
