--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Home | Cicero Tully</title>
-<link rel="stylesheet" type="text/css" href="css/main.css"></link>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Home | Tullysite</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css"></link>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -11,20 +17,8 @@
 <div class="header">
   <div id="navbar" class="nav-bar">
     <div class="icon dropdown">
-      <p class="icon-p">&#9776;</p>
-      <div class="dropdown-content">
-        <a class="nav-excuse focus" href="index.html">Home</a>
-        <a class="nav-excuse" href="scripts.html">AdWords Scripts</a>
-        <a class="nav-excuse" href="blog.html">Book Reviews</a>
-        <a class="nav-excuse" href="friends.html">Friends</a>
-        <a class="nav-excuse" href="resume.html">Resume</a>
-        <a class="nav-excuse" href="music.html">Music</a>
-        <a class="nav-excuse" href="musings.html">Musings</a>
-        <a class="nav-excuse" href="normalscripts.html">Normal Scripts</a>
-        <a class="nav-excuse" href="poems.html">Poems</a>
-        <a class="nav-excuse" href="timesheets.html">Timesheets</a>
-        <a class="nav-excuse" href="contact.html">Contact</a>
-      </div>
+      <a href="index.html" class="nav-excuse">Home</a><a href="nav.html" class="nav-excuse">Nav</a>
+
     </div>
     <a href="index.html">Home</a>
     <a href="resume.html">Resume</a>
