--- a/scripts.html
+++ b/scripts.html
@@ -1,9 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title> AdWords Scripts | Cicero Tully</title>
-<link rel="stylesheet" type="text/css" href="css/main.css"></link>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title> AdWords Scripts | Tullysite</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css"></link>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
