change of nav bar and background

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 <body>
 
 <!--- Navigation Bar --->
-<div class="header">
+<ul class="nav">
+  <li><a href="index.html" class="active-page">Home</a></li>
+  <li><a href="blog.html">Blog</a></li>
+  <li><a href="music.html">Music</a></li>
+  <li><a href="poems.html">Poetry</a></li>
+  <li><a href="friends.html">Friends</a></li>
+  <li><a href="scripts.html">Code</a></li>
+  <li><a href="resume.html">Resume</a></li>
+  <!--<li><a href="booking.html">Booking</a></li>-->
+  <li><a href="contact.html">Contact</a></li><!--<li><a href="contact.html">Contact</a></li>-->
+</ul>
+<!---<div class="header">
   <div id="navbar" class="nav-bar">
     <div class="icon dropdown">
       <a href="index.html" class="nav-excuse">Home</a><a href="nav.html" class="nav-excuse">Nav</a>
@@ -43,16 +54,13 @@
     </div>
   </div>
 </div>
+--->
 <!--- Main Page Content:  --->
   <div id="lead">
-    <h1 class="lead-head">Hi, <em>welcome to cicerotully's site...</em></h1>
+    <h1 class="lead-head">Hi, welcome to the <em>cicerotully</em> site!</h1>
     <div class="button-wrapper">
       <button id="button">Wait, What, Who?</button>
     </div>
-    <p class="lead-par">Go ahead, <em>have a gander;</em>
-    <br/>There's a lot to seee
-    <br/>Just use the navigation bar!</p>
-    <br/>
   </div>
   <div id="infoModal" class="modal background">
     <div id="modalContent" class="modal-content">
