--- a/friends.html
+++ b/friends.html
@@ -14,6 +14,19 @@
 <body>
 
 <!--- Navigation Bar: --->
+<!--- Navigation Bar --->
+<ul class="nav">
+  <li><a href="index.html" class="active-page">Home</a></li>
+  <li><a href="blog.html">Blog</a></li>
+  <li><a href="music.html">Music</a></li>
+  <li><a href="poems.html">Poetry</a></li>
+  <li><a href="friends.html">Friends</a></li>
+  <li><a href="scripts.html">Code</a></li>
+  <li><a href="resume.html">Resume</a></li>
+  <!--<li><a href="booking.html">Booking</a></li>-->
+  <li><a href="contact.html">Contact</a></li><!--<li><a href="contact.html">Contact</a></li>-->
+</ul>
+<!---
   <div class="header">
     <div id="navbar" class="nav-bar">
       <div class="icon dropdown">
@@ -55,7 +68,7 @@
       </div>
     </div>
   </div>
-
+--->
   <!--- Main Page Content:  --->
   <!--- Maintenance Message: -->
   <div class="main">
