--- a/blog.html
+++ b/blog.html
@@ -14,8 +14,8 @@
 <body>
   <!--- Navigation Bar --->
   <ul class="nav">
-    <li><a href="index.html" class="active-page">Home</a></li>
-    <li><a href="blog.html">Blog</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="blog.html" class="active-page">Blog</a></li>
     <li><a href="music.html">Music</a></li>
     <li><a href="poems.html">Poetry</a></li>
     <li><a href="friends.html">Friends</a></li>
