--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
   <!--- Navigation Bar --->
   <ul class="nav">
-    <li><a href="index.html" class="active-page">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="blog.html">Blog</a></li>
     <li><a href="music.html">Music</a></li>
     <li><a href="poems.html">Poetry</a></li>
@@ -22,7 +22,7 @@
     <li><a href="scripts.html">Code</a></li>
     <li><a href="resume.html">Resume</a></li>
     <!--<li><a href="booking.html">Booking</a></li>-->
-    <li><a href="contact.html">Contact</a></li><!--<li><a href="contact.html">Contact</a></li>-->
+    <li><a href="contact.html" class="active-page">Contact</a></li><!--<li><a href="contact.html">Contact</a></li>-->
   </ul>
 <!--- Navigation Bar:
   <div class="header">
