--- a/scripts.html
+++ b/scripts.html
@@ -14,12 +14,12 @@
 <body>
   <!--- Navigation Bar --->
   <ul class="nav">
-    <li><a href="index.html" class="active-page">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="blog.html">Blog</a></li>
     <li><a href="music.html">Music</a></li>
     <li><a href="poems.html">Poetry</a></li>
     <li><a href="friends.html">Friends</a></li>
-    <li><a href="scripts.html">Code</a></li>
+    <li><a href="scripts.html" class="active-page">Code</a></li>
     <li><a href="resume.html">Resume</a></li>
     <!--<li><a href="booking.html">Booking</a></li>-->
     <li><a href="contact.html">Contact</a></li><!--<li><a href="contact.html">Contact</a></li>-->
