added content to friends page and added whitespace

--- a/friends.html
+++ b/friends.html
@@ -70,7 +70,7 @@
   </div>
 --->
   <!--- Main Page Content:  --->
-  <!--- Maintenance Message: -->
+  <!--- Maintenance Message:
   <div class="main">
     <div class="content-lg">
       <h1>&#9874;   Under maintenance </h1>
@@ -79,33 +79,31 @@
   </div>
   <!-- Content -->
 
-  <!---
+
   <div class="main">
     <div class="content-lg">
       <h2>Cicero's Friends:</h2>
       <ul>
         <li>
-          <h3>Dara</h3>
-          <p>....SOMETHING COOL ABOUT HER</p>
-          <a href="https://theundilutedword.com/" target="_blank">Dara's blog &ndash; <em>The Undiluted Word</em></a>
+          <h3>Dara:</h3>
+        <!--  <p>....SOMETHING COOL ABOUT HER</p> -->
+          <p>Dara's blog &ndash; <a href="https://theundilutedword.com/" target="_blank"><em>The Undiluted Word</em></a></p>
         </li>
         <li>
-          <h3>Isabella</h3>
-          <p>....SOMETHING COOL ABOUT HER</p>
-          <a href="https://thosefivewords.blogspot.co.uk/" target="_blank">Isabella's blog &ndash; <em>Those Five Words</em></a>
+          <h3>Isabella:</h3>
+        <!--  <p>....SOMETHING COOL ABOUT HER</p> -->
+          <p>Isabella's blog &ndash; <a href="https://thosefivewords.blogspot.co.uk/" target="_blank"><em>Those Five Words</em></a></p>
         </li>
         <li>
-          <h3>Jennifer</h3>
-          <p>....SOMETHING COOL ABOUT HER</p>
-          <a href="http://www.bootyfurl.co.uk/" target="_blank">Jennifer's site &ndash; <em>Bootyfurl</em></a>
+          <h3>Jennifer:</h3>
+          <!--<p>....SOMETHING COOL ABOUT HER</p> -->
+          <p>Jennifer's site &ndash; <a href="http://www.bootyfurl.co.uk/" target="_blank"><em>Bootyfurl</em></a></p>
         </li>
         <li>
-          <h3>(Sir) Tinashe G Chiweshe</h3>
-          <p>....SOMETHING COOL ABOUT HIM</p>
-          <a href="https://www.instagram.com/thegents.code/" target="_blank">Tinashe's Insta &ndash; <em>@thegents.code</em></a>
-          <br/>
-          <br/>
-          <a href="https://thegentscode.com/" target="_blank">Tinashe's website &ndash; <em>The Gents Code</em></a>
+          <h3>Tinashe:</h3>
+          <!-- <p>....SOMETHING COOL ABOUT HIM</p> -->
+          <p>Tinashe's Insta &ndash; <a href="https://www.instagram.com/thegents.code/" target="_blank"><em>@thegents.code</em></a></p>
+          <p>Tinashe's website &ndash; <a href="https://thegentscode.com/" target="_blank"><em>The Gents Code</em></a></p>
         </li>
       </ul>
       <br/>
@@ -113,12 +111,11 @@
       <ul>
         <li>
           <h3>Matt Fuller's Website</h3>
-          <p>....SOMETHING COOL ABOUT HIM AND BSD ("without the lessons I learnt from this guy my own website would not be nearly as sassy as it is", or something of the sort).</p>
+          <!-- <p>....SOMETHING COOL ABOUT HIM AND BSD ("without the lessons I learnt from this guy my own website would not be nearly as sassy as it is", or something of the sort).</p> -->
           <a href="https://www.over-yonder.net/~fullermd/" target="_blank">over-yonder . net</a>
         </li>
       </ul>
     </div>
   </div>
--->
 </body>
 </html>
