website major changes

--- a/blog.html
+++ b/blog.html
@@ -15,16 +15,16 @@
   <!--- Navigation Bar --->
   <ul class="nav">
     <li><a href="index.html">Home</a></li>
-    <li><a href="blog.html" class="active-page">Blog</a></li>
+    <!-- <li><a href="blog.html" class="active-page">Blog</a></li> -->
     <li><a href="music.html">Music</a></li>
-    <li><a href="poems.html">Poetry</a></li>
-    <li><a href="friends.html">Friends</a></li>
-    <li><a href="scripts.html">Code</a></li>
+    <!-- <li><a href="poems.html">Poetry</a></li> -->
+    <!-- <li><a href="friends.html">Friends</a></li> -->
+    <!-- <li><a href="scripts.html">Code</a></li> -->
     <li><a href="resume.html">Resume</a></li>
     <!--<li><a href="booking.html">Booking</a></li>-->
-    <li><a href="contact.html">Contact</a></li><!--<li><a href="contact.html">Contact</a></li>-->
+    <li><a href="contact.html">Contact</a></li>
   </ul>
-<!--- Navigation Bar: --------------------
+<!--- Navigation Bar: -------------------->
 
   <div class="header">
     <div id="navbar" class="nav-bar">
