--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,11 @@
   <!--- Navigation Bar --->
   <ul class="nav">
     <li><a href="index.html">Home</a></li>
-    <li><a href="blog.html">Blog</a></li>
+    <!-- <li><a href="blog.html">Blog</a></li> -->
     <li><a href="music.html">Music</a></li>
-    <li><a href="poems.html">Poetry</a></li>
-    <li><a href="friends.html">Friends</a></li>
-    <li><a href="scripts.html">Code</a></li>
+    <!-- <li><a href="poems.html">Poetry</a></li> -->
+    <!-- <li><a href="friends.html">Friends</a></li> -->
+    <!-- <li><a href="scripts.html">Code</a></li> -->
     <li><a href="resume.html">Resume</a></li>
     <!--<li><a href="booking.html">Booking</a></li>-->
     <li><a href="contact.html" class="active-page">Contact</a></li><!--<li><a href="contact.html">Contact</a></li>-->
@@ -66,12 +66,22 @@
     </div>
   </div>
 
-  <!--- Main Page Content:  --->
+  <!- Main Page Content:  --->
   <!--- Maintenance Message: --->
   <div class="main">
     <div class="content-lg">
-      <h1>&#9874; Under maintenance</h1>
-      <p>Eventually will be a contact form here, but for now feel free to send any queries you have to this address (or click it, it's a link!): <em><a href="mailto:admin@cicerotully.co.uk">admin@cicerotully.co.uk</a></em>.</p>
+      <h1>Contact Information</h1>
+      <h2>E-mail:</h2>
+      <p>
+        <a href="mailto:ephraim.luwemba@nottingham.ac.uk">ephraim.luwemba@nottingham.ac.uk</a>
+      </p>
+      <h2>Twitter:</h2>
+      <p>
+        <a href="https://twitter.com/Cicero_Tull?ref_src=twsrc%5Etfw">@Cicero_Tull</a>
+      </p>
+      <a href="https://twitter.com/Cicero_Tull?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @Cicero_Tull</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <h2>Linked-In:</h2>
+      <p><a href="https://www.linkedin.com/in/ephraim-luwemba-m/" target="_blank">@Ephraim</a></p>
     </div>
   </div>
 </body>
