--- a/music.html
+++ b/music.html
@@ -15,14 +15,14 @@
   <!--- Navigation Bar --->
   <ul class="nav">
     <li><a href="index.html">Home</a></li>
-    <li><a href="blog.html">Blog</a></li>
+    <!-- <li><a href="blog.html">Blog</a></li> -->
     <li><a href="music.html" class="active-page">Music</a></li>
-    <li><a href="poems.html">Poetry</a></li>
-    <li><a href="friends.html">Friends</a></li>
-    <li><a href="scripts.html">Code</a></li>
+    <!-- <li><a href="poems.html">Poetry</a></li> -->
+    <!-- <li><a href="friends.html">Friends</a></li> -->
+    <!-- <li><a href="scripts.html">Code</a></li> -->
     <li><a href="resume.html">Resume</a></li>
     <!--<li><a href="booking.html">Booking</a></li>-->
-    <li><a href="contact.html">Contact</a></li><!--<li><a href="contact.html">Contact</a></li>-->
+    <li><a href="contact.html">Contact</a></li>
   </ul>
 <!--- Navigation Bar:
   <div class="header">
@@ -70,9 +70,22 @@
   <!--- Maintenance Message: --->
   <div class="main">
     <div class="content-lg">
-      <h1>&#9874;   Under maintenance </h1>
-      <p>Hold out! Eventually there will be <em>something</em> here . . .</p>
+      <h1>Bandcamp</h1>
+      <h2>&#119074; --  Hell Week 2k19</h2>
+      <p>Aptly titled solo bass piece</p>
+      <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/track=2254938195/size=small/bgcol=333333/linkcol=e32c14/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/track/hell-week-2k19">Hell Week 2k19 by Rarcas Oscuro</a></iframe>
     </div>
+  <div class="content-lg">
+    <h1>Youtube</h1>
+    <h2>&#119074; -- The Waltzing Harlequin</h2>
+    <p>(Young Ephraim writing): The name of the piece "The waltzing harlequin" holds its foundations in the Norse myths that picture Loki, the evil God of mischief and dystopia as a dark, clownlike figure. The song chronicles his movements and relentless energy; the main melodic ideas (starting at 1"27) are like the fanfare of the God himself. The eclectic rhythms and free metre are what I feel personify Loki the 'surviving harlequin'.</p>
+    <iframe width="407" height="305" src="https://www.youtube.com/embed/tF57xNwUWpE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+    <h2>&#119074; -- The Spartan Glyph</h2>
+    <iframe width="407" height="305" src="https://www.youtube.com/embed/7sdaDdGjMwE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+    <h2>&#119074; -- The Sunflower Waltz</h2>
+    <iframe width="407" height="305" src="https://www.youtube.com/embed/s8MVOL65xJs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>
+    <!-- <h1>&#119074; -- </h1>
+    <p></p> -->
   </div>
 
 </body>
