--- a/resume.html
+++ b/resume.html
@@ -15,14 +15,14 @@
   <!--- Navigation Bar --->
   <ul class="nav">
     <li><a href="index.html">Home</a></li>
-    <li><a href="blog.html">Blog</a></li>
+    <!-- <li><a href="blog.html">Blog</a></li> -->
     <li><a href="music.html">Music</a></li>
-    <li><a href="poems.html">Poetry</a></li>
-    <li><a href="friends.html">Friends</a></li>
-    <li><a href="scripts.html">Code</a></li>
+    <!-- <li><a href="poems.html">Poetry</a></li> -->
+    <!-- <li><a href="friends.html">Friends</a></li> -->
+    <!-- <li><a href="scripts.html">Code</a></li> -->
     <li><a href="resume.html" class="active-page">Resume</a></li>
     <!--<li><a href="booking.html">Booking</a></li>-->
-    <li><a href="contact.html">Contact</a></li><!--<li><a href="contact.html">Contact</a></li>-->
+    <li><a href="contact.html">Contact</a></li>
   </ul>
 <!--- Navigation Bar:
   <div class="header">
@@ -66,21 +66,14 @@
     </div>
   </div>
 
-<!--- Main Page Content:  --->
+<!- Main Page Content:  --->
 
   <div class="main">
     <div class="content-lg">
       <h1>Cul-de-sac, impasse, quandary, dead end...</h1>
-      <p>Hi, thanks so much for visiting! :).
-        <br/>
-        <br/>
-        <br/>I suppose you're here for the document?
-        <br/>
-        <br/>
+      <p>Hi, thanks so much for visiting! :). <br/>
         <br/>If you would like to view my plaintext <em>resume</em> <a href="resume.txt" target="_blank">click this link</a> (watch out, it pops up!).
       </p>
-      <br/>
-      <p>Hopefully next time you're here there'll be a quote or something...</p>
     </div>
   </div>
 
