--- a/friends.html
+++ b/friends.html
@@ -17,14 +17,14 @@
 <!--- Navigation Bar --->
 <ul class="nav">
   <li><a href="index.html">Home</a></li>
-  <li><a href="blog.html">Blog</a></li>
+  <!-- <li><a href="blog.html">Blog</a></li> -->
   <li><a href="music.html">Music</a></li>
-  <li><a href="poems.html">Poetry</a></li>
-  <li><a href="friends.html" class="active-page">Friends</a></li>
-  <li><a href="scripts.html">Code</a></li>
+  <!-- <li><a href="poems.html">Poetry</a></li> -->
+  <!-- <li><a href="friends.html" class="active-page">Friends</a></li> -->
+  <!-- <li><a href="scripts.html">Code</a></li> -->
   <li><a href="resume.html">Resume</a></li>
   <!--<li><a href="booking.html">Booking</a></li>-->
-  <li><a href="contact.html">Contact</a></li><!--<li><a href="contact.html">Contact</a></li>-->
+  <li><a href="contact.html">Contact</a></li>
 </ul>
 <!---
   <div class="header">
