--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <!--- Navigation Bar --->
 <ul class="nav">
   <li><a href="index.html" class="active-page">Home</a></li>
-  <li><a href="blog.html">Blog</a></li>
+  <!-- <li><a href="blog.html">Blog</a></li> -->
   <li><a href="music.html">Music</a></li>
-  <li><a href="poems.html">Poetry</a></li>
-  <li><a href="friends.html">Friends</a></li>
-  <li><a href="scripts.html">Code</a></li>
+  <!-- <li><a href="poems.html">Poetry</a></li> -->
+  <!-- <li><a href="friends.html">Friends</a></li> -->
+  <!-- <li><a href="scripts.html">Code</a></li> -->
   <li><a href="resume.html">Resume</a></li>
   <!--<li><a href="booking.html">Booking</a></li>-->
-  <li><a href="contact.html">Contact</a></li><!--<li><a href="contact.html">Contact</a></li>-->
+  <li><a href="contact.html">Contact</a></li>
 </ul>
 <!---<div class="header">
   <div id="navbar" class="nav-bar">
@@ -71,7 +71,7 @@
       <div class="modal-body">
         <p>G'morning, g'day, g'afternoon, g'evening &#9788;/&#9789;  &mdash; let's get to the point, shall we:
         </p>
-        <p><b>The <tt>cicerotully site</tt> is the <em>independently coded and maintained</em> semi-professional, semi-satirical personal website of Ephraim Majawala Luwemba (i.e., me &#9835; &#9733;)</b>. I sometimes like to use the moniker 'cicerotully' online, hence my site's name &mdash; it has nothing to do with the Stoic Statesman (<a href="http://www.iep.utm.edu/cicero/" target="_blank">unfortunately</a>).
+        <p><b>The <tt>cicerotully site</tt> is the <em>independently coded and maintained</em> semi-professional, semi-satirical website of Ephraim Majawala Luwemba (i.e., me &#9835; &#9733;)</b>. I sometimes like to use the moniker 'cicerotully' online, hence my site's name &mdash; it has nothing to do with the Stoic Statesman (<a href="http://www.iep.utm.edu/cicero/" target="_blank">unfortunately</a>).
         </p>
         <p><u>I put this site together for two main reasons:</u></p>
         <ol>
