--- a/music.html
+++ b/music.html
@@ -74,6 +74,9 @@
       <h2>&#119074; --  Hell Week 2k19</h2>
       <p>Aptly titled solo bass piece</p>
       <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/track=2254938195/size=small/bgcol=333333/linkcol=e32c14/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/track/hell-week-2k19">Hell Week 2k19 by Rarcas Oscuro</a></iframe>
+      <h2>&#119074; -- Wednesday Night Prayer Meeting</h2>
+      <p>A spiritual experience on a Wednesday night</p>
+      <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=small/bgcol=ffffff/linkcol=0687f5/track=4282510486/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe>
     </div>
   <div class="content-lg">
     <h1>Youtube</h1>
