solo bass project

--- a/music.html
+++ b/music.html
@@ -72,7 +72,7 @@
     <div class="content-lg">
       <h1>Bandcamp</h1>
       <h2>Solo Bass project:</h2>
-      <img src="/img/solobass.jpeg" width=563 height=353>
+      <img src="img/solobass.jpeg" width=563 height=353>
       <h3>&#119074; --  Hell Week 2k19</h3>
       <p>Aptly titled solo bass piece</p>
       <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/track=2254938195/size=small/bgcol=333333/linkcol=e32c14/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/track/hell-week-2k19">Hell Week 2k19 by Rarcas Oscuro</a></iframe>
