fixing mobile rendering

--- a/music.html
+++ b/music.html
@@ -73,7 +73,7 @@
       <h1>Bandcamp</h1>
       <h2>&#119074; Solo Bass project:</h2>
       <div class="image-container">
-        <img src="img/solobass.jpeg" width=563 height=353>
+        <img src="img/solobass.jpeg">
       </div>
       <h3>#1 -- Hell Week 2k19</h3>
       <p>Aptly titled solo bass piece</p>
