--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--- Navigation Bar --->
 <ul class="nav">
   <li><a href="index.html" class="active-page">Home</a></li>
-  <!-- <li><a href="blog.html">Blog</a></li> -->
+  <li><a href="blog.html">Blog</a></li>
   <li><a href="music.html">Music</a></li>
   <!-- <li><a href="poems.html">Poetry</a></li> -->
   <!-- <li><a href="friends.html">Friends</a></li> -->
