--- a/music.html
+++ b/music.html
@@ -15,7 +15,7 @@
   <!--- Navigation Bar --->
   <ul class="nav">
     <li><a href="index.html">Home</a></li>
-    <!-- <li><a href="blog.html">Blog</a></li> -->
+    <li><a href="blog.html">Blog</a></li>
     <li><a href="music.html" class="active-page">Music</a></li>
     <!-- <li><a href="poems.html">Poetry</a></li> -->
     <!-- <li><a href="friends.html">Friends</a></li> -->
