Removing secondary menu from blog

--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
   </ul>
 <!--- Navigation Bar: -------------------->
 
-  <div class="header">
+  <!-- <div class="header">
     <div id="navbar" class="nav-bar">
       <div class="icon dropdown">
         <p class="icon-p">&#9776;</p>
@@ -65,7 +65,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 <!--- Main Page Content:  ----------------------------------------------->
 <!--- Maintenance Message: -->
