Adding a warm place to music page

--- a/music.html
+++ b/music.html
@@ -81,6 +81,9 @@
       <h3>SBP2 -- Wednesday Night Prayer Meeting</h3>
       <p>A spiritual experience on a Wednesday night</p>
       <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=small/bgcol=ffffff/linkcol=0687f5/track=4282510486/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe>
+      <h3>SBP3 -- A Warm Place</h3>
+      <p>On nostalgia and new friends</p>
+      <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=small/bgcol=333333/linkcol=fe7eaf/track=3262174416/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe>
     </div>
   <div class="content-lg">
     <h1>Youtube</h1>
