Making Heading Links styled correctly

--- a/music.html
+++ b/music.html
@@ -70,7 +70,7 @@
   <!--- Maintenance Message: --->
   <div class="main">
     <div class="content-lg">
-      <h1><a href="https://rarcasoscuro.bandcamp.com/releases" target="_blank">Bandcamp<a></h1>
+      <h1><a href="https://rarcasoscuro.bandcamp.com/releases" target="_blank" style="font-size:3.8vw;font-weight:bold;">Bandcamp<a></h1>
       <h2>&#119074; Solo Bass Project:</h2>
       <div class="image-container">
         <img src="img/solobass.jpeg" alt="Rarcas Oscuro solo bass">
@@ -86,7 +86,7 @@
       <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=small/bgcol=333333/linkcol=fe7eaf/track=3262174416/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe>
     </div>
   <div class="content-lg">
-    <h1><a href="https://www.youtube.com/playlist?list=PLqtlRLEaDP9WwnBa0xPnyi7VBtyNVMRDK" target="_blank">Youtube</a></h1>
+    <h1><a href="https://www.youtube.com/playlist?list=PLqtlRLEaDP9WwnBa0xPnyi7VBtyNVMRDK" target="_blank" style="font-size:3.8vw;font-weight:bold;">Youtube</a></h1>
     <h2>&#119074; -- The Waltzing Harlequin</h2>
     <p>(Young Ephraim writing): The name of the piece "The waltzing harlequin" holds its foundations in the Norse myths that picture Loki, the evil God of mischief and dystopia as a dark, clownlike figure. The song chronicles his movements and relentless energy; the main melodic ideas (starting at 1"27) are like the fanfare of the God himself. The eclectic rhythms and free metre are what I feel personify Loki the 'surviving harlequin'.</p>
     <div class="video-container">
