Adding New pieces

--- a/music.html
+++ b/music.html
@@ -78,12 +78,18 @@
       <h3>SBP1 -- Hell Week 2k19</h3>
       <p>Aptly titled solo bass piece</p>
       <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/track=2254938195/size=small/bgcol=333333/linkcol=e32c14/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/track/hell-week-2k19">Hell Week 2k19 by Rarcas Oscuro</a></iframe>
-      <h3>SBP2 -- Wednesday Night Prayer Meeting</h3>
+      <h3>SBP3 -- Wednesday Night Prayer Meeting</h3>
       <p>A spiritual experience on a Wednesday night</p>
       <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=small/bgcol=ffffff/linkcol=0687f5/track=4282510486/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe>
-      <h3>SBP3 -- A Warm Place</h3>
+      <h3>SBP4 -- A Warm Place</h3>
       <p>On nostalgia and new friends</p>
       <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=small/bgcol=333333/linkcol=fe7eaf/track=3262174416/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe>
+      <h3>SBP5 -- O Tannenbaum (O Christmas Tree)</h3>
+      <p>Track 1 of my desk session: bringing all of the holiday cheer</p>
+      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=large/bgcol=333333/linkcol=e99708/tracklist=false/artwork=small/track=4167069198/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe>
+      <h3>SBP6 -- High Noon</h3>
+      <p>Track 2 of my desk session: stuttering and soulful</p>
+      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=large/bgcol=333333/linkcol=e99708/tracklist=false/artwork=small/track=2353835093/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe>
     </div>
   <div class="content-lg">
     <h1><a href="https://www.youtube.com/playlist?list=PLqtlRLEaDP9WwnBa0xPnyi7VBtyNVMRDK" target="_blank" style="font-size:3.8vw;font-weight:bold;">Youtube</a></h1>
