adding phd button

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
   <div id="lead">
     <h1 class="lead-head">Hi, welcome to the <em>cicerotully</em> site!</h1>
     <div class="button-wrapper">
-      <button id="button">Wait, What, Who?</button>
+      <button id="modalbutton">Wait, What, Who?</button>
     </div>
+    <div class="button-wrapper">
+      <button id="phdbutton">Go to My Phd Site</button>
   </div>
   <div id="infoModal" class="modal background">
     <div id="modalContent" class="modal-content">
