Adding PhD link button

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <button id="modalbutton">Wait, What, Who?</button>
     </div>
     <div class="button-wrapper">
-      <button id="phdbutton">Go to My Phd Site</button>
+      <button id="phdbutton" onclick="window.location.href= 'https://ephraimluwemba-phd.github.io/'">Go to My Phd Site</button>
   </div>
   <div id="infoModal" class="modal background">
     <div id="modalContent" class="modal-content">
