changing the solo bass iframe

--- a/music.html
+++ b/music.html
@@ -87,9 +87,9 @@
       <h3>SBP5 -- O Tannenbaum (O Christmas Tree)</h3>
       <p>Track 1 of my desk session: bringing all of the holiday cheer</p>
       <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=large/bgcol=333333/linkcol=e99708/tracklist=false/artwork=small/track=4167069198/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe> -->
-      <h3>SBP6 -- High Noon</h3>
-      <p>Track 2 of my desk session: stuttering and soulful</p>
-      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=large/bgcol=333333/linkcol=e99708/tracklist=true/artwork=small/track=2353835093/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe>
+      <h3>Solo Bass Project</h3>
+      <p>A solo bass album; lo-fi.</p>
+      <iframe style="border: 0; width: 350px; height: 753px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=large/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe>
     </div>
   <div class="content-lg">
     <h1><a href="https://www.youtube.com/playlist?list=PLqtlRLEaDP9WwnBa0xPnyi7VBtyNVMRDK" target="_blank" style="font-size:3.8vw;font-weight:bold;">Youtube</a></h1>
