--- a/music.html
+++ b/music.html
@@ -72,6 +72,7 @@
     <div class="content-lg">
       <h1><a href="https://rarcasoscuro.bandcamp.com/releases" target="_blank" style="font-size:3.8vw;font-weight:bold;">Bandcamp<a></h1>
       <h2>&#119074; Solo Bass Project:</h2>
+      <img src="img/solobass.jpeg" style="width: 100%; height: 100%"/>
 
       <!-- <h3>SBP1 -- Hell Week 2k19</h3>
       <p>Aptly titled solo bass piece</p>
@@ -85,8 +86,8 @@
       <h3>SBP5 -- O Tannenbaum (O Christmas Tree)</h3>
       <p>Track 1 of my desk session: bringing all of the holiday cheer</p>
       <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=large/bgcol=333333/linkcol=e99708/tracklist=false/artwork=small/track=4167069198/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe> -->
-      <p>A solo bass album; lo-fi.</p>
-      <iframe style="border: 0; width: 350px; height: 753px;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=large/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe>
+     <!-- <p>A solo bass album; lo-fi.</p> -->
+      <iframe style="border: 0; width: 100%; height: 40%;" src="https://bandcamp.com/EmbeddedPlayer/album=1118943220/size=medium/bgcol=ffffff/linkcol=63b2cc/transparent=true/"><a href="http://rarcasoscuro.bandcamp.com/album/solo-bass">Solo Bass by Rarcas Oscuro</a></iframe>
     </div>
   <div class="content-lg">
     <h1><a href="https://www.youtube.com/playlist?list=PLqtlRLEaDP9WwnBa0xPnyi7VBtyNVMRDK" target="_blank" style="font-size:3.8vw;font-weight:bold;">Youtube</a></h1>
