--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="_VTGh4YrU407VG9WCvr-D8U9tgE2vnP0rwJaqZaSo5s" />
 </head>
 <body>
 
